Fixed white space at the bottom of page but i'm hardcoding it (will fix later)

--- a/styles/event.css
+++ b/styles/event.css
@@ -1,5 +1,5 @@
 main {
-  height: 54vh;
+  height: 57vh;
   width: 80vw;
   margin: 1rem auto;
 }
